--- a/birds/index.html
+++ b/birds/index.html
@@ -183,10 +183,27 @@
         footer {
             text-align: center;
             margin-top: 60px;
-            padding-top: 30px;
-            font-size: 0.85rem;
+            padding: 40px 20px;
+            font-size: 1.1rem;
             color: var(--text-light);
             border-top: 2px solid rgba(212, 165, 116, 0.3);
+            background: rgba(255, 255, 255, 0.5);
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        footer a {
+            display: inline-block;
+            margin-top: 10px;
+            padding: 10px 20px;
+            background: var(--accent-warm);
+            color: white !important;
+            text-decoration: none;
+            border-radius: 30px;
+            font-weight: bold;
+            box-shadow: 0 4px 10px rgba(212, 165, 116, 0.3);
         }
 
         /* Modal styles */
@@ -732,8 +749,11 @@
     </div>
 
     <footer>
-        <p>Suggest a bird: <a href="mailto:birds@cowneck.com"
-                style="color: var(--accent-warm); text-decoration: none; font-weight: bold;">birds@cowneck.com</a></p>
+        <p>Suggest a bird:</p>
+        <a href="mailto:birds@cowneck.com">birds@cowneck.com</a>
+        <div style="margin-top: 20px;">
+            <a href="/" style="background: var(--primary-dark); font-size: 0.9rem;">← Back to cowneck.com</a>
+        </div>
     </footer>
 
     <!-- Image Modal -->
