--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>cowneck</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6RNVL7JZVJ"></script>
@@ -28,18 +29,29 @@
         }
 
         .links {
-            margin-top: 20px;
-            font-family: monospace;
+            margin-top: 30px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: #333;
+            font-size: 1.2rem;
+            display: flex;
+            gap: 20px;
+            justify-content: center;
         }
 
         .links a {
             text-decoration: none;
             color: #0066cc;
+            padding: 10px 15px;
+            border: 1px solid #0066cc22;
+            border-radius: 8px;
+            background: #fff;
+            transition: all 0.2s ease;
         }
 
         .links a:hover {
-            text-decoration: underline;
+            background-color: #0066cc;
+            color: #fff;
+            text-decoration: none;
         }
     </style>
 </head>
@@ -50,7 +62,8 @@
             <img src="./chester.png" alt="Chester" />
         </a>
         <div class="links">
-            <a href="games/">games</a> | <a href="birds/">birds</a>
+            <a href="games/">games</a>
+            <a href="birds/">birds</a>
         </div>
     </div>
 </body>
