feat: Add Lofi Pup game card to the games index.

--- a/games/index.html
+++ b/games/index.html
@@ -245,6 +245,13 @@
                 <a href="slope-builder.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>🐶 Lofi Pup</h2>
+                <p>Relax with procedural music. A generative lofi music station where you can tune the vibes with
+                    custom seeds and filters.</p>
+                <a href="lofi-pup.html" class="btn">PLAY NOW</a>
+            </div>
+
         </div>
 
         <h2 class="section-header">Oliver</h2>
