--- a/games/lofi-pup.html
+++ b/games/lofi-pup.html
@@ -44,6 +44,53 @@
         .bumping {
             animation: pulse-speaker 0.4s ease-out;
         }
+
+        .station-btn {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.25rem;
+            padding: 0.5rem 0.75rem;
+            border-radius: 0.75rem;
+            transition: all 0.3s ease;
+            color: #78716c;
+            /* stone-500 */
+        }
+
+        .station-btn:hover {
+            color: #d97706;
+            /* amber-600 */
+        }
+
+        .station-btn.active {
+            background-color: rgba(68, 64, 60, 0.5);
+            /* stone-700/50 */
+            color: #d97706;
+            /* amber-600 */
+            box-shadow: inset 0 2px 4px 0 rgba(0, 0, 0, 0.06);
+        }
+
+        .mixer-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5rem;
+            border-radius: 0.5rem;
+            transition: all 0.3s ease;
+            border: 1px solid transparent;
+            background-color: rgba(41, 37, 36, 0.4);
+            /* stone-900/40 */
+            color: #78716c;
+            /* stone-500 */
+        }
+
+        .mixer-btn.active {
+            border-color: rgba(120, 113, 108, 0.2);
+            background-color: rgba(68, 64, 60, 0.5);
+            /* stone-700/50 */
+            color: #d97706;
+            /* amber-600 */
+        }
     </style>
 </head>
 
@@ -97,6 +144,46 @@
             <!-- Controls -->
             <div class="flex flex-col gap-4">
 
+                <!-- Station Selector -->
+                <div class="flex justify-between items-center bg-stone-900/40 p-2 rounded-2xl mb-2">
+                    <button onclick="switchStation('sunset')" id="btn-sunset" class="station-btn active group">
+                        <i data-lucide="sun" class="w-4 h-4"></i>
+                        <span class="text-[8px] font-black uppercase tracking-tighter">Sunset</span>
+                    </button>
+                    <button onclick="switchStation('rainy')" id="btn-rainy" class="station-btn group">
+                        <i data-lucide="cloud-rain" class="w-4 h-4"></i>
+                        <span class="text-[8px] font-black uppercase tracking-tighter">Rainy</span>
+                    </button>
+                    <button onclick="switchStation('midnight')" id="btn-midnight" class="station-btn group">
+                        <i data-lucide="moon" class="w-4 h-4"></i>
+                        <span class="text-[8px] font-black uppercase tracking-tighter">Midnight</span>
+                    </button>
+                </div>
+
+                <!-- Mixer -->
+                <div class="grid grid-cols-4 gap-2 mb-2">
+                    <button onclick="toggleInstrument('kick')" id="mix-kick"
+                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Kick">
+                        <i data-lucide="circle-dot" class="w-4 h-4"></i>
+                        <span class="text-[7px] font-black uppercase">Kick</span>
+                    </button>
+                    <button onclick="toggleInstrument('snare')" id="mix-snare"
+                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Snare">
+                        <i data-lucide="circle" class="w-4 h-4"></i>
+                        <span class="text-[7px] font-black uppercase">Snare</span>
+                    </button>
+                    <button onclick="toggleInstrument('hihat')" id="mix-hihat"
+                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Hi-Hat">
+                        <i data-lucide="more-horizontal" class="w-4 h-4"></i>
+                        <span class="text-[7px] font-black uppercase">Hats</span>
+                    </button>
+                    <button onclick="toggleInstrument('chord')" id="mix-chord"
+                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Chords">
+                        <i data-lucide="layers" class="w-4 h-4"></i>
+                        <span class="text-[7px] font-black uppercase">Chord</span>
+                    </button>
+                </div>
+
                 <!-- Main Transport -->
                 <div class="flex justify-center items-center gap-6">
                     <button id="play-btn"
@@ -108,52 +195,49 @@
 
                 <!-- Sliders -->
                 <div class="grid grid-cols-1 gap-4 mt-2">
-                    <div class="grid grid-cols-1 gap-4 mt-2">
-                        <div class="space-y-1">
-                            <div
-                                class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
-                                <div class="flex items-center gap-1">
-                                    <span>Lofi Filter</span>
-                                    <button onclick="showHelp('filter')" class="hover:text-amber-600 transition-colors">
-                                        <i data-lucide="help-circle" class="w-3 h-3"></i>
-                                    </button>
-                                </div>
-                                <span id="filter-val">50%</span>
+                    <div class="space-y-1">
+                        <div
+                            class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
+                            <div class="flex items-center gap-1">
+                                <span>Lofi Filter</span>
+                                <button onclick="showHelp('filter')" class="hover:text-amber-600 transition-colors">
+                                    <i data-lucide="help-circle" class="w-3 h-3"></i>
+                                </button>
                             </div>
-                            <input type="range" id="filter-slider" min="100" max="3000" value="800"
-                                class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
+                            <span id="filter-val">50%</span>
                         </div>
+                        <input type="range" id="filter-slider" min="100" max="3000" value="800"
+                            class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
+                    </div>
 
-                        <div class="space-y-1">
-                            <div
-                                class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
-                                <div class="flex items-center gap-1">
-                                    <span>Vinyl Crackle</span>
-                                    <button onclick="showHelp('crackle')"
-                                        class="hover:text-amber-600 transition-colors">
-                                        <i data-lucide="help-circle" class="w-3 h-3"></i>
-                                    </button>
-                                </div>
-                                <span id="crackle-val">30%</span>
+                    <div class="space-y-1">
+                        <div
+                            class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
+                            <div class="flex items-center gap-1">
+                                <span>Vinyl Crackle</span>
+                                <button onclick="showHelp('crackle')" class="hover:text-amber-600 transition-colors">
+                                    <i data-lucide="help-circle" class="w-3 h-3"></i>
+                                </button>
                             </div>
-                            <input type="range" id="crackle-slider" min="0" max="100" value="15"
-                                class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
+                            <span id="crackle-val">30%</span>
                         </div>
+                        <input type="range" id="crackle-slider" min="0" max="100" value="15"
+                            class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
+                    </div>
 
-                        <div class="space-y-1">
-                            <div
-                                class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
-                                <div class="flex items-center gap-1">
-                                    <span>Tape Wobble</span>
-                                    <button onclick="showHelp('wobble')" class="hover:text-amber-600 transition-colors">
-                                        <i data-lucide="help-circle" class="w-3 h-3"></i>
-                                    </button>
-                                </div>
-                                <span id="wobble-val">Medium</span>
+                    <div class="space-y-1">
+                        <div
+                            class="flex justify-between text-xs font-bold tracking-wider text-stone-500 uppercase items-center">
+                            <div class="flex items-center gap-1">
+                                <span>Tape Wobble</span>
+                                <button onclick="showHelp('wobble')" class="hover:text-amber-600 transition-colors">
+                                    <i data-lucide="help-circle" class="w-3 h-3"></i>
+                                </button>
                             </div>
-                            <input type="range" id="wobble-slider" min="0" max="50" value="15"
-                                class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
+                            <span id="wobble-val">Medium</span>
                         </div>
+                        <input type="range" id="wobble-slider" min="0" max="50" value="15"
+                            class="w-full h-2 bg-stone-900 rounded-lg appearance-none cursor-pointer accent-amber-600">
                     </div>
 
                     <!-- Meta Info -->
@@ -217,7 +301,38 @@
             // Settings
             const lookahead = 25.0; // ms
             const scheduleAheadTime = 0.1; // s
-            const bpm = 80;
+            let bpm = 80;
+
+            // Station Data
+            const stations = {
+                sunset: {
+                    name: "Sunset Glow",
+                    bpm: 80,
+                    style: "classic",
+                    color: "text-amber-600"
+                },
+                rainy: {
+                    name: "Rainy Window",
+                    bpm: 72,
+                    style: "minimal",
+                    color: "text-blue-500"
+                },
+                midnight: {
+                    name: "Midnight Neon",
+                    bpm: 92,
+                    style: "jazzy",
+                    color: "text-purple-500"
+                }
+            };
+            let currentStation = 'sunset';
+
+            // Mixer State
+            let instrumentState = {
+                kick: true,
+                snare: true,
+                hihat: true,
+                chord: true
+            };
 
             // Canvas
             const canvas = document.getElementById('visualizer');
@@ -387,6 +502,8 @@
             }
 
             function playChord(time, duration) {
+                if (!instrumentState.chord) return;
+
                 // Pick next chord in progression
                 const chordObj = chords[chordProgression[currentChordIndex % chordProgression.length]];
                 currentChordIndex++;
@@ -507,39 +624,43 @@
                 // 6: Snare
                 // 7: Hihat
 
-                if (beatNumber % 8 === 0) {
-                    createKick(triggerTime);
-                    // New Chord every 16 beats (2 bars) or 8 beats (1 bar)
-                    if (beatNumber % 16 === 0) {
-                        // Change progression occasionally
-                        if (Math.random() > 0.7) {
-                            chordProgression = chordProgression.sort(() => Math.random() - 0.5);
-                        }
-                        playChord(triggerTime, (60 / bpm) * 16); // Hold for 4 bars equivalent
-                    } else if (beatNumber % 8 === 0) {
-                        // Sometimes retrigger chord logic here if we want faster changes
-                        // playChord(triggerTime, (60/bpm) * 8); 
+                // Pattern Branching based on Station Style
+                const style = stations[currentStation].style;
+
+                if (style === "classic") {
+                    // Classic Boom Bap (Current pattern)
+                    if (beatNumber % 8 === 0 && instrumentState.kick) createKick(triggerTime);
+                    if (beatNumber % 8 === 4 && instrumentState.kick) createKick(triggerTime);
+                    if ((beatNumber % 8 === 2 || beatNumber % 8 === 6) && instrumentState.snare) createSnare(triggerTime);
+                    if (instrumentState.hihat) createHiHat(triggerTime);
+                    if (Math.random() > 0.8 && instrumentState.hihat) createHiHat(triggerTime + ((60 / bpm) / 4));
+                } else if (style === "minimal") {
+                    // Minimal/Lo-fi ambient (Fewer kicks, softer)
+                    if (beatNumber % 8 === 0 && instrumentState.kick) createKick(triggerTime);
+                    if (beatNumber % 8 === 6 && instrumentState.snare) createSnare(triggerTime);
+                    if (beatNumber % 2 === 0 && instrumentState.hihat) createHiHat(triggerTime);
+                } else if (style === "jazzy") {
+                    // Jazzy/Swingy (More ghosts, syncopation)
+                    if (beatNumber % 8 === 0 && instrumentState.kick) createKick(triggerTime);
+                    if (beatNumber % 8 === 3 && Math.random() > 0.5 && instrumentState.kick) createKick(triggerTime);
+                    if (beatNumber % 8 === 4 && instrumentState.kick) createKick(triggerTime);
+                    if ((beatNumber % 8 === 2 || beatNumber % 8 === 6) && instrumentState.snare) createSnare(triggerTime);
+                    if (instrumentState.hihat) createHiHat(triggerTime);
+                    // Double hats on 1st and 3rd beats
+                    if (beatNumber % 4 === 0 && instrumentState.hihat) createHiHat(triggerTime + ((60 / bpm) / 4));
+                }
+
+                // Global Chord Logic (applies to all stations)
+                if (beatNumber % 16 === 0) {
+                    if (Math.random() > 0.7) {
+                        chordProgression = chordProgression.sort(() => Math.random() - 0.5);
                     }
+                    if (instrumentState.chord) playChord(triggerTime, (60 / bpm) * 16);
                 }
 
-                if (beatNumber % 8 === 4) {
-                    createKick(triggerTime);
-                }
-
-                // Occasional ghost kick
-                if (beatNumber % 8 === 3 && Math.random() > 0.7) {
+                // Occasional ghost kick (mostly for classic/jazzy)
+                if (style !== 'minimal' && beatNumber % 8 === 3 && Math.random() > 0.7 && instrumentState.kick) {
                     createKick(triggerTime + 0.2);
-                }
-
-                if (beatNumber % 8 === 2 || beatNumber % 8 === 6) {
-                    createSnare(triggerTime);
-                }
-
-                // Hi-hats every 8th note
-                createHiHat(triggerTime);
-                // Occasional 16th note hat
-                if (Math.random() > 0.8) {
-                    createHiHat(triggerTime + ((60 / bpm) / 2));
                 }
             }
 
@@ -723,6 +844,45 @@
             document.getElementById('help-modal').addEventListener('click', (e) => {
                 if (e.target.id === 'help-modal') hideHelp();
             });
+
+            // Station Switching
+            function switchStation(id) {
+                currentStation = id;
+                const data = stations[id];
+                bpm = data.bpm;
+
+                // Update UI buttons
+                document.querySelectorAll('.station-btn').forEach(btn => btn.classList.remove('active'));
+                document.getElementById(`btn-${id}`).classList.add('active');
+
+                // Visual Feedback on Screen
+                const status = document.getElementById('status-text');
+                const oldText = status.innerText;
+                status.innerText = data.name.toUpperCase();
+                status.classList.remove('animate-pulse');
+
+                // Color chord display
+                const display = document.getElementById('chord-display');
+                display.className = `text-sm h-5 font-mono transition-colors duration-500 ${data.color}`;
+
+                setTimeout(() => {
+                    status.innerText = isPlaying ? "PLAYING..." : "READY...";
+                    if (!isPlaying) status.classList.add('animate-pulse');
+                }, 2000);
+            }
+
+            // Instrument Toggling
+            function toggleInstrument(name) {
+                instrumentState[name] = !instrumentState[name];
+                const btn = document.getElementById(`mix-${name}`);
+                if (instrumentState[name]) {
+                    btn.classList.add('active');
+                } else {
+                    btn.classList.remove('active');
+                    // If mutes chords, clear the display
+                    if (name === 'chord') chordDisplay.innerText = "--";
+                }
+            }
 
         </script>
 </body>
