--- a/games/lofi-pup.html
+++ b/games/lofi-pup.html
@@ -91,6 +91,19 @@
             color: #d97706;
             /* amber-600 */
         }
+
+        /* Vertical range slider styling */
+        .vertical-range {
+            -webkit-appearance: slider-vertical;
+            appearance: slider-vertical;
+            writing-mode: bt-lr;
+            opacity: 0.6;
+            transition: opacity 0.3s;
+        }
+
+        .vertical-range:hover {
+            opacity: 1;
+        }
     </style>
 </head>
 
@@ -162,26 +175,61 @@
 
                 <!-- Mixer -->
                 <div class="grid grid-cols-4 gap-2 mb-2">
-                    <button onclick="toggleInstrument('kick')" id="mix-kick"
-                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Kick">
-                        <i data-lucide="circle-dot" class="w-4 h-4"></i>
-                        <span class="text-[7px] font-black uppercase">Kick</span>
-                    </button>
-                    <button onclick="toggleInstrument('snare')" id="mix-snare"
-                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Snare">
-                        <i data-lucide="circle" class="w-4 h-4"></i>
-                        <span class="text-[7px] font-black uppercase">Snare</span>
-                    </button>
-                    <button onclick="toggleInstrument('hihat')" id="mix-hihat"
-                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Hi-Hat">
-                        <i data-lucide="more-horizontal" class="w-4 h-4"></i>
-                        <span class="text-[7px] font-black uppercase">Hats</span>
-                    </button>
-                    <button onclick="toggleInstrument('chord')" id="mix-chord"
-                        class="mixer-btn active group flex-col gap-1 py-3" title="Toggle Chords">
-                        <i data-lucide="layers" class="w-4 h-4"></i>
-                        <span class="text-[7px] font-black uppercase">Chord</span>
-                    </button>
+                    <!-- Kick Column -->
+                    <div class="flex flex-col gap-2 items-center">
+                        <div class="h-16 w-full bg-stone-900/40 rounded-xl flex items-center justify-center p-2">
+                            <input type="range" oninput="updateMixerVolume('kick', this.value)" min="0" max="100"
+                                value="80" class="vertical-range h-12 w-1 accent-amber-600 cursor-pointer"
+                                style="-webkit-appearance: slider-vertical; appearance: slider-vertical;">
+                        </div>
+                        <button onclick="toggleInstrument('kick')" id="mix-kick"
+                            class="mixer-btn active group flex-col gap-1 py-1 w-full" title="Toggle Kick">
+                            <i data-lucide="circle-dot" class="w-3 h-3"></i>
+                            <span class="text-[7px] font-black uppercase">Kick</span>
+                        </button>
+                    </div>
+
+                    <!-- Snare Column -->
+                    <div class="flex flex-col gap-2 items-center">
+                        <div class="h-16 w-full bg-stone-900/40 rounded-xl flex items-center justify-center p-2">
+                            <input type="range" oninput="updateMixerVolume('snare', this.value)" min="0" max="100"
+                                value="70" class="vertical-range h-12 w-1 accent-amber-600 cursor-pointer"
+                                style="-webkit-appearance: slider-vertical; appearance: slider-vertical;">
+                        </div>
+                        <button onclick="toggleInstrument('snare')" id="mix-snare"
+                            class="mixer-btn active group flex-col gap-1 py-1 w-full" title="Toggle Snare">
+                            <i data-lucide="circle" class="w-3 h-3"></i>
+                            <span class="text-[7px] font-black uppercase">Snare</span>
+                        </button>
+                    </div>
+
+                    <!-- Hats Column -->
+                    <div class="flex flex-col gap-2 items-center">
+                        <div class="h-16 w-full bg-stone-900/40 rounded-xl flex items-center justify-center p-2">
+                            <input type="range" oninput="updateMixerVolume('hihat', this.value)" min="0" max="100"
+                                value="80" class="vertical-range h-12 w-1 accent-amber-600 cursor-pointer"
+                                style="-webkit-appearance: slider-vertical; appearance: slider-vertical;">
+                        </div>
+                        <button onclick="toggleInstrument('hihat')" id="mix-hihat"
+                            class="mixer-btn active group flex-col gap-1 py-1 w-full" title="Toggle Hi-Hat">
+                            <i data-lucide="more-horizontal" class="w-3 h-3"></i>
+                            <span class="text-[7px] font-black uppercase">Hats</span>
+                        </button>
+                    </div>
+
+                    <!-- Chord Column -->
+                    <div class="flex flex-col gap-2 items-center">
+                        <div class="h-16 w-full bg-stone-900/40 rounded-xl flex items-center justify-center p-2">
+                            <input type="range" oninput="updateMixerVolume('chord', this.value)" min="0" max="100"
+                                value="70" class="vertical-range h-12 w-1 accent-amber-600 cursor-pointer"
+                                style="-webkit-appearance: slider-vertical; appearance: slider-vertical;">
+                        </div>
+                        <button onclick="toggleInstrument('chord')" id="mix-chord"
+                            class="mixer-btn active group flex-col gap-1 py-1 w-full" title="Toggle Chords">
+                            <i data-lucide="layers" class="w-3 h-3"></i>
+                            <span class="text-[7px] font-black uppercase">Chord</span>
+                        </button>
+                    </div>
                 </div>
 
                 <!-- Main Transport -->
@@ -298,6 +346,9 @@
             let vinylNode;
             let analyser;
 
+            // Mixer Group Nodes
+            let mixKick, mixSnare, mixHihat, mixChord;
+
             // Settings
             const lookahead = 25.0; // ms
             const scheduleAheadTime = 0.1; // s
@@ -332,6 +383,12 @@
                 snare: true,
                 hihat: true,
                 chord: true
+            };
+            let instrumentVolumes = {
+                kick: 0.8,
+                snare: 0.7,
+                hihat: 0.8,
+                chord: 0.7
             };
 
             // Canvas
@@ -394,6 +451,23 @@
                 compressor.connect(analyser);
                 analyser.connect(audioCtx.destination);
 
+                // Mixer Nodes (for instant muting)
+                mixKick = audioCtx.createGain();
+                mixSnare = audioCtx.createGain();
+                mixHihat = audioCtx.createGain();
+                mixChord = audioCtx.createGain();
+
+                mixKick.connect(masterGain);
+                mixSnare.connect(masterGain);
+                mixHihat.connect(masterGain);
+                mixChord.connect(masterGain);
+
+                // Initialize volume based on state
+                mixKick.gain.value = instrumentState.kick ? instrumentVolumes.kick : 0;
+                mixSnare.gain.value = instrumentState.snare ? instrumentVolumes.snare : 0;
+                mixHihat.gain.value = instrumentState.hihat ? instrumentVolumes.hihat : 0;
+                mixChord.gain.value = instrumentState.chord ? instrumentVolumes.chord * 0.7 : 0;
+
                 // Start ambiance
                 createVinylCrackle();
 
@@ -408,7 +482,7 @@
                 const gain = audioCtx.createGain();
 
                 osc.connect(gain);
-                gain.connect(masterGain);
+                gain.connect(mixKick);
 
                 osc.frequency.setValueAtTime(150, time);
                 osc.frequency.exponentialRampToValueAtTime(0.01, time + 0.5);
@@ -445,7 +519,7 @@
 
                 noise.connect(noiseFilter);
                 noiseFilter.connect(noiseGain);
-                noiseGain.connect(masterGain);
+                noiseGain.connect(mixSnare);
 
                 noiseGain.gain.setValueAtTime(0.4, time);
                 noiseGain.gain.exponentialRampToValueAtTime(0.01, time + 0.2);
@@ -456,7 +530,7 @@
                 osc.type = 'triangle';
                 const oscGain = audioCtx.createGain();
                 osc.connect(oscGain);
-                oscGain.connect(masterGain);
+                oscGain.connect(mixSnare);
 
                 osc.frequency.setValueAtTime(200, time);
                 oscGain.gain.setValueAtTime(0.2, time);
@@ -483,22 +557,27 @@
 
                 const highpass = audioCtx.createBiquadFilter();
                 highpass.type = 'highpass';
-                highpass.frequency.value = 7000;
+                highpass.frequency.value = 5000; // Lowered to let some "meat" through for crunch
+
+                const distortion = audioCtx.createWaveShaper();
+                distortion.curve = makeDistortionCurve(100);
+                distortion.oversample = '4x';
 
                 const gain = audioCtx.createGain();
 
                 noise.connect(bandpass);
                 bandpass.connect(highpass);
-                highpass.connect(gain);
-                gain.connect(masterGain);
+                highpass.connect(distortion);
+                distortion.connect(gain);
+                gain.connect(mixHihat);
 
-                // Randomize velocity slightly
-                const velocity = 0.05 + Math.random() * 0.05;
+                // Sharper, crunchier hit (increased baseline)
+                const velocity = 0.15 + Math.random() * 0.1;
 
                 gain.gain.setValueAtTime(velocity, time);
-                gain.gain.exponentialRampToValueAtTime(0.001, time + 0.05);
-
+                gain.gain.exponentialRampToValueAtTime(0.001, time + 0.1); // Slightly longer for "sizzle"
                 noise.start(time);
+                noise.stop(time + 0.1);
             }
 
             function playChord(time, duration) {
@@ -532,7 +611,7 @@
                 lfo.connect(lfoGain);
 
                 chordGain.connect(filter);
-                filter.connect(masterGain);
+                filter.connect(mixChord);
 
                 if (!chordObj || !chordObj.offsets) {
                     console.error("Invalid chord object:", chordObj);
@@ -871,17 +950,66 @@
                 }, 2000);
             }
 
-            // Instrument Toggling
+            // Mixer Logic
+            function updateMixerVolume(name, value) {
+                const vol = value / 100;
+                instrumentVolumes[name] = vol;
+                if (instrumentState[name]) {
+                    const nodes = {
+                        kick: mixKick,
+                        snare: mixSnare,
+                        hihat: mixHihat,
+                        chord: mixChord
+                    };
+                    const targetGain = name === 'chord' ? vol * 0.7 : vol;
+                    if (nodes[name]) {
+                        nodes[name].gain.setTargetAtTime(targetGain, audioCtx.currentTime, 0.05);
+                    }
+                }
+            }
+
             function toggleInstrument(name) {
                 instrumentState[name] = !instrumentState[name];
                 const btn = document.getElementById(`mix-${name}`);
+
+                // Audio Routing Gain Nodes
+                const nodes = {
+                    kick: mixKick,
+                    snare: mixSnare,
+                    hihat: mixHihat,
+                    chord: mixChord
+                };
+
+                const vol = instrumentVolumes[name];
+                const targetGain = instrumentState[name] ? (name === 'chord' ? vol * 0.7 : vol) : 0;
+
+                if (nodes[name]) {
+                    nodes[name].gain.setTargetAtTime(targetGain, audioCtx.currentTime, 0.02);
+                }
+
                 if (instrumentState[name]) {
                     btn.classList.add('active');
                 } else {
                     btn.classList.remove('active');
-                    // If mutes chords, clear the display
-                    if (name === 'chord') chordDisplay.innerText = "--";
+                    // If mutes chords, clear the display shortly after
+                    if (name === 'chord') {
+                        setTimeout(() => {
+                            if (!instrumentState.chord) chordDisplay.innerText = "--";
+                        }, 50);
+                    }
                 }
+            }
+
+            function makeDistortionCurve(amount) {
+                const k = typeof amount === 'number' ? amount : 50;
+                const n_samples = 44100;
+                const curve = new Float32Array(n_samples);
+                const deg = Math.PI / 180;
+                for (let i = 0; i < n_samples; ++i) {
+                    const x = (i * 2) / n_samples - 1;
+                    curve[i] = ((3 + k) * x * 20 * deg) / (Math.PI + k * Math.abs(x));
+                }
+                return curve;
             }
 
         </script>
