feat: add new "Hypnotizer" game with its HTML and JavaScript files, and update the games index to link to it.

--- a/games/index.html
+++ b/games/index.html
@@ -258,9 +258,10 @@
         <div class="games-container">
 
             <div class="game-card">
-                <h2>🔜 Coming Soon</h2>
-                <p>New adventures are on the way! Stay tuned for Oliver's first game.</p>
-                <a href="#" class="btn" style="pointer-events: none; opacity: 0.6;">STAY TUNED</a>
+                <h2>🌀 Hypnotizer</h2>
+                <p>Escape the hypnotic rings and break them all to unlock new levels. Use arrow keys to navigate and
+                    break the rings.</p>
+                <a href="hypnotizer.html" class="btn">PLAY NOW</a>
             </div>
 
         </div>
