feat: Add `touch-action: none` to canvas, set `pixelDensity(1)`, and implement mobile/mouse controls for improved mobile experience.
#vibe-coding prompt: "game is laggy on mobile"

--- a/games/hypnotizer.html
+++ b/games/hypnotizer.html
@@ -18,6 +18,8 @@
 
         canvas {
             display: block;
+            touch-action: none;
+            /* Prevent browser gestures */
         }
     </style>
 </head>
