--- a/games/hypnotizer.html
+++ b/games/hypnotizer.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.11.7/lib/p5.js"></script>
     <script src="hypnotizer.js"></script>
     <style>
@@ -74,10 +75,27 @@
             color: #000;
             box-shadow: 0 0 15px #fff;
         }
+
+        #menu-btn {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            z-index: 5;
+            padding: 8px 16px;
+            font-size: 0.9rem;
+            opacity: 0.5;
+            display: none;
+            /* Hidden by default */
+        }
+
+        #menu-btn:hover {
+            opacity: 1;
+        }
     </style>
 </head>
 
 <body>
+    <button id="menu-btn" onclick="returnToMenu()">MENU</button>
     <div id="start-screen">
         <h1>HYPNOTIZER</h1>
         <div class="scheme-grid">
