feat: Add PNG vs JPG game card to games index.

--- a/games/index.html
+++ b/games/index.html
@@ -252,6 +252,12 @@
                 <a href="lofi-pup.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>🖼️ PNG vs JPG</h2>
+                <p>Can you tell the difference? Test your eyes and identify the higher quality image.</p>
+                <a href="png-vs-jpg.html" class="btn">PLAY NOW</a>
+            </div>
+
         </div>
 
         <h2 class="section-header">Oliver</h2>
